[package]
name = "audio-player"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro2 = "1.0.89"
quote = "1.0.37"
rayon = "1.10.0"
rodio = { version = "0.20.1", features = ["minimp3"] }
tinyrand = "0.5.0"
ureq = "2.10.1"
url = "2.5.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"

[lib]
proc-macro = true

[[bin]]
name = "compiled"
path = "src/compiled.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[[bin]]
name = "web"
path = "src/web.rs"

[lints.clippy]
all = "warn"
pedantic = "warn"

[lints.rust]
missing_docs = "warn"

[lints.rustdoc]
broken_intra_doc_links = "warn"
missing_crate_level_docs = "warn"
private_doc_tests = "warn"
unescaped_backticks = "warn"
