[workspace]
members = ["audio_player", "files", "macros"]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.rustdoc]
missing_docs = "warn"
missing_crate_level_docs = "warn"
missing_doc_code_examples = "warn"
private_doc_tests = "warn"
unescaped_backticks = "warn"
