[package]
name = "audio-player"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
crossterm = { version = "0.28.1", default-features = false, features = ["events", "windows"] }
files = { path = "../files" }
# Disable IDNA
idna_adapter = "=1.0.0"
macros = { path = "../macros" }
rodio = { version = "0.20.1", default-features = false, features = ["minimp3"] }
tinyrand = "0.5.0"
ureq = "2.10.1"
url = "2.5.3"

[lints]
workspace = true
