[package]
name = "audio-player"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
compile-dotenv = "0.1.0"
crossterm = { version = "0.28.1", default-features = false, features = ["events", "windows"] }
files = { path = "../files" }
# Disable IDNA
idna_adapter = "=1.0.0"
macros = { path = "../macros" }
ratatui = "0.28.0"
rodio = { version = "0.20.1", default-features = false, features = ["symphonia-mp3"] }
souvlaki = "0.7.3"
tinyrand = "0.5.0"
ureq = "2.10.1"
url = "2.5.3"
winctx = "0.0.19"
windows-sys = { version = "0.59.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_DataExchange", "Win32_UI_Shell"] }
winit = { version = "0.30.5" }

[lints]
workspace = true
