[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[dependencies]
files = { path = "../files" }
proc-macro2 = "1.0.89"
quote = "1.0.37"

[lib]
proc-macro = true

[lints.clippy]
all = "warn"
pedantic = "warn"

[lints.rust]
missing_docs = "warn"

[lints.rustdoc]
broken_intra_doc_links = "warn"
missing_crate_level_docs = "warn"
private_doc_tests = "warn"
unescaped_backticks = "warn"
