[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[dependencies]
files = { path = "../files" }
proc-macro2 = "1.0.89"
quote = "1.0.37"

[lib]
proc-macro = true

[features]
# The reason we do this is because doctests don't get cfg(test)
# See: https://github.com/rust-lang/cargo/issues/4669
test = []

[lints]
workspace = true
